Added sections to CSS file

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,6 @@
+/******
+    GENERAL
+ ******/
 html, body {
     background-color: #fff;
     color: #636b6f;
@@ -7,3 +10,10 @@ html, body {
     margin: 0;
 }
 
+/******
+    HEADER
+ ******/
+
+/******
+    BODY
+ ******/
