--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,3 +17,32 @@ html, body {
 /******
     BODY
  ******/
+
+/******
+    FOOTER
+ ******/
+footer {
+    text-align: center;
+    font-size: 12px;
+}
+
+footer hr {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+footer hr:after {
+    /*Image reference: https://www.rmit.edu.au/about/our-brand*/
+    content: url('../images/rmitlogo.jpg');
+    display: inline-block;
+    position: relative;
+    top: -0.7em;
+    font-size: 1.5em;
+    padding: 0 0.25em;
+    background: white;
+}
+
+footer p {
+    padding: 10px;
+}
