--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,6 +18,16 @@ html, body {
 /******
     BODY
  ******/
+    /***
+        HOME PAGE
+     ***/
+#filter {
+    padding:20px;
+}
+
+#about {
+
+}
 
 /******
     FOOTER
@@ -25,6 +35,7 @@ html, body {
 footer {
     text-align: center;
     font-size: 12px;
+    padding-bottom: 70px;
 }
 
 footer hr {
