Added margin to filter divs as well as bootstrap columns

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,8 +21,9 @@ html, body {
     /***
         HOME PAGE
      ***/
-#filter {
-    padding:20px;
+#critical, #non-critical, #general-advise {
+    margin-top:20px;
+    margin-bottom:20px;
 }
 
 #about {
