Added display:none to elements on request page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,3 +75,13 @@ footer hr:after {
 footer p {
     padding: 10px;
 }
+
+/******
+    REQUEST SERVICE
+ ******/
+    /******
+    CREATE
+    ******/
+#computerHardware, #computerSoftware, #computerSoftwareOther {
+    display: none;
+}
