Removed hidden attributes for hardware and software types

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -82,6 +82,6 @@ footer p {
     /******
     CREATE
     ******/
-#computerHardware, #computerSoftware, #problemStatusField {
+#problemStatusField {
     display: none;
 }
