--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,6 +80,10 @@ footer p {
     REQUEST SERVICE
  ******/
     /******
+    INDEX
+    ******/
+
+    /******
     CREATE
     ******/
 #problemStatusField {
