--- a/public/css/main.css
+++ b/public/css/main.css
@@ -53,16 +53,24 @@ html, body {
 #pencil {
     color: sandybrown;
     font-size: 15em !important;
-}
-
-#smile {
-    color: yellow;
-    text-shadow: 0px 0px 3px black;
-    font-size: 15em !important;
+    padding-top: 45px;
 }
 
 .filter {
     text-align: center;
+}
+
+.single-features {
+    height: 350px;
+}
+
+#homePageImg {
+    padding-top: 65px;
+}
+
+#homePageFeature {
+    padding-top: 20px;
+    padding-bottom: 30px;
 }
 
 /******
